--- a/bom/runtime/pom.xml
+++ b/bom/runtime/pom.xml
@@ -30,7 +30,7 @@
         <microprofile-metrics-api.version>2.3</microprofile-metrics-api.version>
         <microprofile-context-propagation.version>1.0.1</microprofile-context-propagation.version>
         <microprofile-opentracing-api.version>1.3.3</microprofile-opentracing-api.version>
-        <microprofile-reactive-streams-operators.version>1.0</microprofile-reactive-streams-operators.version>
+        <microprofile-reactive-streams-operators.version>1.0.1</microprofile-reactive-streams-operators.version>
         <microprofile-rest-client.version>1.4.1</microprofile-rest-client.version>
         <smallrye-config.version>1.7.0</smallrye-config.version>
         <smallrye-health.version>2.2.0</smallrye-health.version>
@@ -42,7 +42,7 @@
         <smallrye-context-propagation.version>1.0.11</smallrye-context-propagation.version>
         <smallrye-reactive-streams-operators.version>1.0.10</smallrye-reactive-streams-operators.version>
         <smallrye-converter-api.version>1.0.10</smallrye-converter-api.version>
-        <smallrye-reactive-messaging.version>1.1.0</smallrye-reactive-messaging.version>
+        <smallrye-reactive-messaging.version>2.0.0</smallrye-reactive-messaging.version>
         <swagger-ui.version>3.25.0</swagger-ui.version>
         <jakarta.activation.version>1.2.1</jakarta.activation.version>
         <jakarta.annotation-api.version>1.3.5</jakarta.annotation-api.version>
@@ -2531,6 +2531,10 @@
                     <exclusion>
                         <groupId>org.slf4j</groupId>
                         <artifactId>slf4j-log4j12</artifactId>
+                    </exclusion>
+                    <exclusion>
+                        <groupId>log4j</groupId>
+                        <artifactId>log4j</artifactId>
                     </exclusion>
                 </exclusions>
             </dependency>
