--- a/extensions/smallrye-reactive-messaging/deployment/pom.xml
+++ b/extensions/smallrye-reactive-messaging/deployment/pom.xml
@@ -33,7 +33,7 @@
     </dependency>
     <dependency>
       <groupId>io.quarkus</groupId>
-      <artifactId>quarkus-vertx-core</artifactId>
+      <artifactId>quarkus-vertx-deployment</artifactId>
     </dependency>
     <dependency>
       <groupId>io.quarkus</groupId>
