Replace kscript for the native cron report with jbang
Also provide a deep link into the GH Action that run

This work was originally done for and tested with
https://github.com/quarkusio/quarkus-ecosystem-ci

--- a/.github/workflows/ci-actions.yml
+++ b/.github/workflows/ci-actions.yml
@@ -14,7 +14,7 @@ on:
       - '.github/ISSUE_TEMPLATE/**'
       - '.github/autoissuelabeler.yml'
       - '.github/boring-cyborg.yml'
-      - '.github/NativeBuildReport.kts'
+      - '.github/NativeBuildReport.java'
       - '.dependabot/**'
   pull_request:
     types: [opened, synchronize, reopened, ready_for_review]
@@ -28,7 +28,7 @@ on:
       - '.github/ISSUE_TEMPLATE/**'
       - '.github/autoissuelabeler.yml'
       - '.github/boring-cyborg.yml'
-      - '.github/NativeBuildReport.kts'
+      - '.github/NativeBuildReport.java'
       - '.dependabot/**'
 
 env:
